# dynlib-loader

./: .gitignore  CMakeLists.txt  README.md
include/: DLInstanceLoader.hpp  DLLoaderFactory.hpp  DLLoaderManager.hpp  DirectoryLoader.hpp  Export.hpp  FileSystem.hpp  Libloader.hpp  SearchLoad.hpp  path.hpp
include/impl/: ImplDllLoader.hpp  types.hpp
src/: path.cpp
src/impl/: unixDllLoader.cpp  unixFileSystem.cpp  win32DllLoader.cpp  win32FileSystem.cpp
